--- a/assets/styles.css
+++ b/assets/styles.css
@@ -7,3 +7,11 @@
     box-shadow: 4px 4px 8px 4px rgba(0, 0, 0, 0.4), 0px 6px 20px 0px rgba(0, 0, 0, 0.2);
     border-radius: 20px;
 }
+
+
+.logo{
+    position: absolute;
+    top: 70px;
+    left: 300px;
+
+}
